--- a/Task-2.html
+++ b/Task-2.html
@@ -10,12 +10,12 @@
 
 
 	<body style="color:black; background-color:#fffaed">
-	<p style="background-color:skyblue;>Takasi Nyande </p>
+	<p style="background-color:skyblue">Takasi Nyande </p>
 
      <div style="height:200px; width:100%; float:left;margin:4%;background-color:#d9d4d0;opacity:0.5px">
         <header>
             <center>
-           <h1 style="color:tomato;font-family:montserrat;"> Takasi Nyande  </h1>
+           <h1 class="hcolor" style="font-family:montserrat;"> Takasi Nyande  </h1>
 	 <h4>
 
 	<a href="https://www.linkedin.com/in/takasi-nyande-60796b44/" target="_blank"> LinkedIn</a>
@@ -48,9 +48,9 @@
 <section id="AboutMe" >
 <div style="height:300px;width:100%; background-color:#dcd9d2;margin:0.5">
    <center>
-       <h1 style="color:tomato"> About Me  </h1>
+       <h1 class="hcolor"> About Me  </h1>
   </center>
-  <h2 style="font-family:montserrat; font-size:120%; text-align:justify">
+  <h2 class="fontstyle" style="text-align:justify">
   <p>I am a highly effective and results oriented with over 16 years of experience in managing teams, partnerships, maintaining,            administering, configuring, troubleshooting and monitoring computer systems, databases, security systems and networks to work            effectively.
 <span>
 <p>I also have extensive experience in the deployment and management of IT service solutions, vendor management,               automation of business processes, business intelligence tools, IT business transformation, projects, cyber security. </span>
@@ -63,10 +63,10 @@
 
   <section id="Skills">
   <center>
-      <h1 style="color:tomato">Skills</h1>
+      <h1 class="hcolor">Skills</h1>
 
   </center>
-  <h2 style="font-family:montserrat; font-size:120%;">
+  <h2 class="fontstyle">
   <ol type="circle">
       <li>Systems Administration</li>
       <li>Project Management</li>
@@ -82,10 +82,10 @@
 <section id="Hobbies" styles="background-color:#42ddf5">
 <div style="height:200px;width:100%; background-color:#dcd9d2; margin:0.5">
 <center>
-      <h1 style="color:tomato">Hobbies</h1>
+      <h1 class="hcolor">Hobbies</h1>
 
   </center>
-  <h2 style="font-family:montserrat; font-size:120%;">
+  <h2 class="fontstyle">
   <ol type="circle">
       <li>Squash</li>
       <li>Football</li>
@@ -99,7 +99,7 @@
 </section>
 
   <center>
-  <h1 style="color:tomato"> Contact/Find Me </h2>
+  <h1 class="hcolor"> Contact/Find Me </h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.5908922143744!2d-0.01208608524853778!3d5.627250295920662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf87432654caff%3A0xe36ffffc200eb080!2sBond%20Savings%20%26%20Loans%20Limited!5e0!3m2!1sen!2sgh!4v1637614782219!5m2!1sen!2sgh" width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </center>
 </body>
@@ -107,6 +107,6 @@
 
 <footer>
 <center>
-<h2 style="color:tomato; font-size=20%;" > &copy;Takasi </h2>
+<h2 class="hcolor" style="font-size:20%" > &copy;Takasi </h2>
 </center>
 </footer>
